Fix mobile horizontal scrolling

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -543,7 +543,7 @@ a[ id= "request" ]:target ~ #about main-content.project {
     font-size: 1rem; }
 
   .card-group {
-    visibility: hidden;
+    display: none;
   }
 
   .card-group-mobile {
@@ -613,6 +613,9 @@ a[ id= "request" ]:target ~ #about main-content.project {
       }
 
     @media screen and (max-width: 42em) {
+      .card-group {
+        width: 10px;
+      }
       .footer-content {
         padding: 2rem 1rem;
         position: relative;
